# rust_new

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo-minimal.toml  Cargo.toml  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_FLYIO.md  DEPLOY_FREE.md  DEPLOY_NOW.sh  Dockerfile  Dockerfile.simple  FREE_DEPLOY_OPTIONS.md  GET_LIVE_LINK.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_DEPLOY.md  README.md  RECRUITER_PITCH.md  Shuttle.toml  TROUBLESHOOTING.md  check_errors.sh  debug_setup.sh  deploy-railway.sh  deploy-shuttle.sh  docker-compose.yml  fly.toml  quick_fix.sh  quick_start.sh  railway.toml  real_trading_demo.py  run_demo.sh  run_demo_fixed.sh  run_simple_demo.sh  run_web_demo.sh  showcase_demo.py  simple_showcase.py  simple_web_demo.py  (+5 more)
benches/: orderbook_bench.rs  simple_bench.rs
simple_cargo/: Cargo.toml
simple_cargo/src/: main.rs
simple_cargo/static/: app.js  index.html  styles.css
src/: engine.rs  lib.rs  lib.rs.bak  lib_simple.rs  main.rs  main.rs.bak  main_new.rs  main_simple.rs.bak  standalone_simple_engine.rs  web.rs
src/api/: mod.rs  rest_server.rs
src/exchange/: binance.rs  coinbase.rs  connector.rs  feed.rs  manager.rs  mod.rs
src/orderbook/: book.rs  engine.rs  matching.rs  mod.rs
src/services/: benchmark_service.rs  market_data_service.rs  mod.rs  portfolio_service.rs  risk_service.rs  trading_service.rs
src/types/: execution.rs  market.rs  metrics.rs  mod.rs  order.rs
src/utils/: latency.rs  memory.rs  mod.rs  sparse_vector.rs
src/web/: index.html
tests/: integration_test.rs
