[package]
name = "crypto-orderbook"
version = "0.1.0"
edition = "2021"
authors = ["Arav Behl <behlarav@gmail.com>"]
description = "High-Performance Cryptocurrency Order Book with Binance WebSocket Integration"
license = "MIT"

[lib]
name = "crypto_orderbook"
path = "src/lib.rs"

[[bin]]
name = "trading-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Web server (optional - for REST API demo)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
web = ["axum", "tower-http"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
