[package]
name = "simple-trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

[[bin]]
name = "simple_engine"
path = "../src/standalone_simple_engine.rs"